Adding CSS file

--- a/frontend-simple/ index.html
+++ b/frontend-simple/ index.html
@@ -52,8 +52,8 @@
   </form>
 
   <h3>🧾 Réponse :</h3>
-  <div class="response" id="response"></div>
 
+ <pre class="response" id="response"></pre>
   <script>
 const endpoint = "http://127.0.0.1:8080/function";
 
